k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: economia
  labels:
    app.kubernetes.io/part-of: economia
